ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      alb.ingress.kubernetes.io/ingress.class: alb
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      meta.helm.sh/release-name: argocd
      meta.helm.sh/release-namespace: argocd
    creationTimestamp: "2025-01-17T11:57:00Z"
    finalizers:
    - ingress.k8s.aws/resources
    generation: 1
    labels:
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: argocd-server
      app.kubernetes.io/part-of: argocd
      app.kubernetes.io/version: v2.13.3
      helm.sh/chart: argo-cd-7.7.16
    name: argocd-server
    namespace: argocd
    resourceVersion: "47330"
    uid: c2e9d02b-77cb-45ea-8c93-a6926c03bd16
  spec:
    ingressClassName: alb
    rules:
    - http:
        paths:
        - backend:
            service:
              name: argocd-server
              port:
                number: 443
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - hostname: k8s-argocd-argocdse-34a5a9a6d9-61364791.us-west-2.elb.amazonaws.com
kind: List
metadata:
  resourceVersion: ""
